# MonkeroECS

./: .gitignore  Doxyfile.in  LICENSE  README.md  meson.build  monkeroecs.hh
examples/: benchmark.cc  boardgame.cc  everything.cc  synthetic_benchmarks.cc
multi/: container.hh  container.tcc  ecs.hh  ecs.tcc  entity.hh  event.hh  event.tcc  search_index.hh  search_index.tcc
tests/: components.cc  concat.cc  copy.cc  entities.cc  events.cc  foreach.cc  search.cc  test.hh
